# rapidtexter-gui

./: .gitignore  CMakeLists.txt  CMakeLists_Console.txt  Main.qml  README.md  build_deb.sh  build_flatpak.sh  build_rpm.sh  index.html  io.github.aleafarrel.RapidTexter.desktop  io.github.aleafarrel.RapidTexter.metainfo.xml  io.github.aleafarrel.RapidTexter.yml  main.cpp
assets/: en.txt  id.txt  prog.txt
include/: GameBackend.h  GameEngine.h  GameUI.h  HistoryManager.h  NetworkManager.h  ProgressManager.h  SFXManager.h  SettingsManager.h  Stats.h  Terminal.h  TextProvider.h
qml/: qmldir
qml/components/: HistoryDetailOverlay.qml  MenuItemC.qml  NavBtn.qml  SplashScreen.qml  StatusBar.qml  Theme.qml
qml/pages/: CampaignMenuPage.qml  CreditsPage.qml  CustomDurationPage.qml  DurationMenuPage.qml  GameplayPage.qml  HistoryPage.qml  LanguageMenuPage.qml  LobbyPage.qml  MainMenuPage.qml  ManualSetupPage.qml  ModeMenuPage.qml  RaceGameplayPage.qml  RaceResultsPage.qml  ResetHistoryPage.qml  ResetProgressPage.qml  ResultsPage.qml
resources/: app.rc
src/: GameBackend.cpp  GameEngine.cpp  GameUI.cpp  HistoryManager.cpp  NetworkManager.cpp  ProgressManager.cpp  SFXManager.cpp  SettingsManager.cpp  Terminal.cpp  TextProvider.cpp  main.cpp
